# ai-for-developers-project-387

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.github/workflows/: audit_schedule.yml  opencode-review.yml  opencode-triage.yml  opencode.yml  release-please.yml  triage_analysis.yml  triage_execution.yml
code/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
code/alembic/: env.py
code/alembic/versions/: 2036ab5a6eab_initial.py
code/app/: config.py  main.py  seed.py
code/app/api/: auth.py  bookings.py  event_types.py  schedules.py  slots.py
code/app/auth/: __init__.py  dependencies.py  jwt.py  password.py
code/app/models/: __init__.py  attendee.py  availability.py  booking.py  event_type.py  schedule.py  user.py
code/app/schemas/: auth.py  booking.py  event_type.py  schedule.py  slots.py
code/tests/: conftest.py  test_api.py  test_auth.py  test_slots.py
docs/: auth-plan.md  research-calcom.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
playwright-report/: index.html
spec/: main.tsp  package-lock.json  package.json  tspconfig.yaml
test-results/: .last-run.json
test-results/booking-Booking-page-click-322b3-ot-again-keeps-form-visible-chromium/: error-context.md
test-results/booking-Booking-page-date-picker-defaults-to-today-chromium/: error-context.md
test-results/booking-Booking-page-shows-No-available-times-on-weekend-chromium/: error-context.md
tests/e2e/: booking.spec.ts
(+20 files in other folders)
